tests/NormalTests/paczka1/small_fuzzy/95295905.err
Error in line 1: xj5rRR S923 94,4
Error in line 4: i6wZ0EnbLg S38 90,3
